express/blocks/template-list/template-list.css
main .template-list-horizontal-fullwidth-container {
  padding-top: 0;
}

main .template-list-fullwidth-container > div,
main .template-list-fullwidth-apipowered-container > div {
  max-width: none;
  padding: 0;
}

main .template-list-fullwidth-container > .default-content-wrapper,
main .template-list-fullwidth-apipowered-container > .default-content-wrapper {
  padding: 0 15px;
}

main .template-list-fullwidth-container .default-content-wrapper h2,
main .template-list-fullwidth-container .default-content-wrapper p,
main .template-list-fullwidth-apipowered-container .default-content-wrapper h2,
main .template-list-fullwidth-apipowered-container .default-content-wrapper p {
  margin: 0;
  text-align: left;
}

main .template-list-horizontal-fullwidth-mini-apipowered-spreadsheet-powered-container h2,
main .template-list-horizontal-fullwidth-mini-apipowered-spreadsheet-powered-container .default-content-wrapper h2{
  margin: 20px 12px 0 12px;
  text-align: left;
}

main .template-list-horizontal-fullwidth-mini-apipowered-spreadsheet-powered-container p {
  font-weight: 800;
  font-size: var(--body-font-size-m);
  margin: 16px 12px 12px 12px;
  text-align: left;
}

main .template-list.template-list-complete {
  min-height: unset;
}

main .template-list-horizontal-fullwidth-collaboration-container .default-content-wrapper h2,
main .template-list-horizontal-fullwidth-collaboration-container .default-content-wrapper h3,
main .template-list-horizontal-fullwidth-collaboration-container .default-content-wrapper p {
  text-align: left;
  padding: 0 28px;
  margin: 12px 0;
}

main .template-list-horizontal-fullwidth-collaboration-container .default-content-wrapper p {
  font-size: 16px;
  line-height: 24px;
}

main .template-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 20px auto 0 auto;
  font-size: var(--body-font-size-m);
  font-weight: var(--body-font-weight);
  text-align: left;
}

main .template-list.sixcols,
main .template-list.fullwidth {
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
}

main .template-list.fullwidth.sm-view,
main .template-list.fullwidth.md-view,
main .template-list.fullwidth.lg-view {
  padding: 0 28px;
}

main .template-list-wrapper.with-categories-list .template-list.fullwidth {
  width: 100%;
  min-height: 600px;
}

main .template-list.sixcols > .masonry-col,
main .template-list.fullwidth > .masonry-col {
  max-width: 175px;
}

main .template-list.fullwidth.sm-view > .masonry-col {
  max-width: 170px;
  text-align: center;
}

main .template-list.fullwidth.md-view > .masonry-col {
  max-width: 258.5px;
  text-align: center;
}

main .template-list.fullwidth.lg-view > .masonry-col {
  max-width: 352px;
  text-align: center;
}

main .template-list .template-title {
  margin: 0 12px 20px 12px;
}

main .template-list .template-title > div {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  align-items: flex-start;
}

main .template-list .template-title > div > * {
  text-align: left;
  margin: 0;
}

main .template-list .template-title p {
  margin-top: 8px;
  width: fit-content;
  font-size: var(--body-font-size-m);
}

main .template-list .template-link,
main .template-list .template-title-link {
  text-decoration: none;
  padding-left: 16px;
  padding-top: 6px;
  display: flex;
}

main .template-list .template-link::after,
main .template-list .template-title-link::after {
  display: flex;
  width: 6px;
  height: 6px;
  border-top-width: 0;
  border-left-width: 0;
  border-bottom-width: 2px;
  border-right-width: 2px;
  border-style: solid;
  border-color: var(--color-info-accent);
  transform-origin: 75% 75%;
  transform: rotate( -45deg );
  content: "";
  margin-top: 5px;
  margin-left: 5px;
  margin-right: 2.25px;
}

main .template-list .template-title-link {
  padding: 0;
  white-space: nowrap;
}

main .template-list .template-title-link::after {
  margin-top: 7px;
}

main .template-list .template p {
  margin: 0;
}

main .template-list .template {
  display: flex;
  flex-direction: column;
  width: 240px;
  margin: 0 0 32px 0;
  justify-content: flex-end;
  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  break-inside: avoid;
  text-decoration: unset;
  position: relative;
  border-radius: 7px;
}

main .template-list .template:focus {
  outline: none;
  box-shadow: 0 0 0 2px var(--color-white), 0 0 0 4px var(--color-info-accent);
}


main .template-list .template > div:first-child > a:any-link {
  padding-left: 0;
}

main .template-list .template img, main .template-list .template video {
  border-radius: 7px;
}

main .template-list.lg-view .template img,
main .template-list.lg-view .template video,
main .template-list.md-view .template img,
main .template-list.md-view .template video,
main .template-list.sm-view .template img,
main .template-list.sm-view .template video {
  width: 100%;
}

main .template-list.large .template {
  width: 100%;
  margin: 0;
  border: 0;
}

main .template-list.large .template > div {
  margin: 0;
}

main .template-list.large .template img {
  width: 100%;
}

main .template-list + .button-container > a {
  margin: 0;
}

main .template-list .template:not(.placeholder) .icon {
  position: absolute;
  width: 30px;
  height: 30px;
  bottom: 6px;
  right: 6px;
}

main .template-list .template:not(.placeholder) .icon-free-badge {
  height: 24px;
  display: flex;
  border-radius: 1000px;
  align-items: center;
  font-weight: 500;
  width: max-content;
  top: 8px;
  right: 8px;
  color: var(--color-white);
  font-size: 12px;
  line-height: 16px;
  padding: 0 12px;
  background: #000000B3;
}

/* horizontal template-list */
main .template-list-horizontal-fullwidth-container > div,
main .template-list-horizontal-fullwidth-collaboration-container > div {
  max-width: none;
  padding: 0;
}

main .template-list.horizontal {
  display: block;
  margin-left: auto;
  margin-right: auto;
  min-height: 220px;
}
/* ... */

